feat: mobile layout improvements + remove sensitive info
Mobile Layout:
- Make Intelligence Report section compact on mobile
- Reduce padding, font sizes, and button sizes
- More compact and mobile-friendly design

Security - Remove Sensitive Information:
- Remove specific domains from README files (use placeholders)
- Remove subdomains and IPs from .env.example
- Make docker-compose.dev.yml use environment variables instead of hardcoded values
- Database credentials in .env.example now generic placeholders

Changed files:
- README.md, README_TR.md (removed specific domains)
- .env.example (generic URLs and credentials)
- docker-compose.dev.yml (use VIRTUAL_HOST/LETSENCRYPT_HOST env vars)
- app/static/css/main.css (compact mobile styles)
- app/templates/index.html (CSS version bump to 5.2)

Note: All subdomains (n8n.metinkorkmaz.quest, sgnl.metinkorkmaz.quest)
and IPs removed from example files to prevent information disclosure.

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@
 # Database URL for analytics (default: PostgreSQL)
 # For PostgreSQL: postgresql://user:password@host.docker.internal:5432/dbname
 # For MySQL: mysql://user:password@localhost:3306/dbname
-DATABASE_URL=postgresql://sgnl_analytics:123456@host.docker.internal:5432/sgnl
+# For SQLite: (default, no connection string needed)
+DATABASE_URL=postgresql://user:password@host.docker.internal:5432/dbname
 
 # ============ API KEYS ============
 
@@ -19,10 +20,10 @@ TAVILY_API_KEY=tvly-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # ============ n8n WORKFLOWS ============
 
 # n8n webhook URL for deep scan with LLM analysis
-N8N_WEBHOOK_URL=http://n8n.metinkorkmaz.quest/webhook/sgnl/scan-topic
+N8N_WEBHOOK_URL=http://n8n.your-domain.com/webhook/sgnl/scan-topic
 
 # n8n webhook URL for fast search (raw results only)
-N8N_FAST_SEARCH_URL=http://n8n.metinkorkmaz.quest/webhook/fast-search
+N8N_FAST_SEARCH_URL=http://n8n.your-domain.com/webhook/fast-search
 
 # ============ RATE LIMITING ============
 
@@ -35,7 +36,7 @@ RATE_WINDOW_SECONDS=60
 # ============ CORS CONFIGURATION ============
 
 # CORS allowed origins (comma-separated URLs)
-ALLOWED_ORIGINS=https://sgnl.metinkorkmaz.quest,http://localhost:3000
+ALLOWED_ORIGINS=https://your-domain.com,http://localhost:3000
 
 # ============ SERVER CONFIGURATION ============
 
@@ -57,3 +58,8 @@ DENSITY_THRESHOLD=0.45
 
 # Max content length to send to LLM (default: 12000)
 LLM_MAX_CHARS=12000
+
+# Density algorithm weights for combined scoring (sum to 1.0)
+CPIDR_WEIGHT=0.5
+DEPID_WEIGHT=0.3
+READABILITY_WEIGHT=0.2
