--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,6 +8,7 @@ openai>=1.0.0
 beautifulsoup4>=4.12.0
 lxml>=5.0.0
 ideadensity>=0.1.0
+textstat>=0.7.3
 python-dotenv>=1.0.0
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
